syntax = "proto2";
package futupb;
option java_package = "com.futu.openapi.pb";
option go_package = "github.com/santsai/futu-go/pb";

import "Common.proto";
import "Trd_Common.proto";

//推送协议，无C2S和Request结构，retType始终是RetType_Succeed

message TrdUpdateOrderFillResponse
{
	required TrdHeader header = 1; //交易公共参数头
	required OrderFill orderFill = 2; //成交结构
}

message TrdUpdateOrderFillResponse_Internal
{
	//以下3个字段每条协议都有，注释说明在InitConnect.proto中
	required RetType retType = 1 [default = RetType_Unknown];
	optional string retMsg = 2;
	optional int32 errCode = 3;

	optional TrdUpdateOrderFillResponse payload = 4;
}
