syntax = "proto2";
package futupb;
option java_package = "com.futu.openapi.pb";
option go_package = "github.com/santsai/futu-go/pb";

import "Common.proto";
import "Qot_Common.proto";

message QotGetMarketStateRequest
{
	repeated Security securityList = 1; //股票列表
}

message MarketInfo
{
	required Security security = 1; //股票代码
	required string name = 2; // 股票名称
	required int32 marketState = 3; //Qot_Common.QotMarketState,市场状态
}

message QotGetMarketStateResponse
{
	repeated MarketInfo marketInfoList = 1; // 市场状态信息
}

message QotGetMarketStateRequest_Internal
{
	required QotGetMarketStateRequest payload = 1;
}

message QotGetMarketStateResponse_Internal
{
	required int32 retType = 1 [default = -400]; //RetType,返回结果
	optional string retMsg = 2;
	optional int32 errCode = 3;

	optional QotGetMarketStateResponse payload = 4;
}
