syntax = "proto2";
package futupb;
option java_package = "com.futu.openapi.pb";
option go_package = "github.com/santsai/futu-go/pb";

import "Common.proto";
import "Qot_Common.proto";

message QotGetTickerRequest
{
	required Security security = 1; //股票
	required int32 maxRetNum = 2; //最多返回的逐笔个数,实际返回数量不一定会返回这么多,最多返回1000个
}

message QotGetTickerResponse
{
    required Security security = 1; //股票
	optional string name = 3; // 股票名称
	repeated Ticker tickerList = 2; //逐笔
}

message QotGetTickerRequest_Internal
{
	required QotGetTickerRequest payload = 1;
}

message QotGetTickerResponse_Internal
{
	required int32 retType = 1 [default = -400]; //RetType,返回结果
	optional string retMsg = 2;
	optional int32 errCode = 3;
	optional QotGetTickerResponse payload = 4;
}
