syntax = "proto2";
package futupb;
option java_package = "com.futu.openapi.pb";
option go_package = "github.com/santsai/futu-go/pb";

import "Common.proto";
import "Qot_Common.proto";

message QotRequestTradeDateRequest
{
	// 当 market 和 security 同时存在，会忽略 market，仅对 security 进行查询。
	required TradeDateMarket market = 1; //Qot_Common.TradeDateMarket,要查询的市场
	required string beginTime = 2; //开始时间字符串
	required string endTime = 3; //结束时间字符串
	optional Security security = 4; // 指定标的
}

message TradeDate
{
	required string time = 1; //时间字符串
	optional double timestamp = 2; //时间戳
	optional TradeDateType tradeDateType = 3; //Qot_Common.TradeDateType,交易时间类型
}

message QotRequestTradeDateResponse
{
	repeated TradeDate tradeDateList = 1; //交易日,注意该交易日是通过自然日去除周末以及节假日得到，不包括临时休市数据。
}

message QotRequestTradeDateRequest_Internal
{
	required QotRequestTradeDateRequest payload = 1;
}

message QotRequestTradeDateResponse_Internal
{
	required RetType retType = 1 [default = RetType_Unknown]; //RetType,返回结果
	optional string retMsg = 2;
	optional int32 errCode = 3;

	optional QotRequestTradeDateResponse payload = 4;
}
